--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,9 @@ gradle.version=7.3.1
 jetbrainsChangelogVersion=1.3.1
 researchgateReleaseVersion=2.8.1
 
+# Tech Easy Solutions
+tes-rest-models.version=1.0.0-SNAPSHOT
+
 # Libraries
 cglib-nodep.version=3.3.0
 junit-jupiter.version=5.8.2
@@ -21,3 +24,6 @@ lombok.version=1.18.22
 objenesis.version=3.2
 spock-core.version=2.0-groovy-3.0
 groovy.version=3.0.9
+spring-framework.version=5.3.15
+javax-servlet-api.version=3.0.1
+springdoc-openapi.version=1.5.12
