--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ jetbrainsChangelogVersion=1.3.1
 researchgateReleaseVersion=2.8.1
 
 # Tech Easy Solutions
-tes-rest-models.version=1.0.0-SNAPSHOT
+tes-rest-models.version=1.0.0
 
 # Libraries
 cglib-nodep.version=3.3.0
