[Gradle Release Plugin] - pre tag commit:  '1.0.0'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 # ============================================================================================
 
 # Repo versions
-version=1.0.0-SNAPSHOT
+version=1.0.0
 
 # Build versions
 gradle.version=7.3.1
